# CodenameOne

./: .all-contributorsrc  .gitignore  .travis.yml  A.java  AGENTS.md  BUILDING.md  CLAUDE.md  CONTRIBUTING.md  Jenkinsfile  LICENSE  NOTICE  ParparVMBootstrap.java  README.MD  README.md  SECURITY.md  antw  build.xml  context7.json  index.html  job-logs.txt  params.json  quality-report.md
.brokk/: project.properties  review.md
.ci/container/: Dockerfile
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  performance.yml  platform_compatibility.yml
.github/codeql/: codeql-config.yml
.github/scripts/: build_javadocs.sh  cldc11_api_compat_check.py  compare-animation-screenshots.sh  (+4 more)
.travis/: android-waiting-for-emulator.sh  build.sh  trigger-builds.sh
CodenameOne/: JavaDocOverview.html  build.xml  build_javadoc.sh
CodenameOneDesigner/: Icon.icns  build.xml  smooth.jsmooth
Docs/: README.md
Factory/: build.xml  pom.xml
Ports/JavaSE/native/cn1-ble-helper/: .gitignore  Cargo.toml  PROTOCOL.md
Ports/JavaSE/native/cn1-ble-helper/src/: lib.rs  main.rs
Samples/: README.md  build.xml
Themes/: .gitignore  AndroidMaterialTheme.res  BusinessTheme.res  FlatBlueTheme.res  FlatOrangeTheme.res  FlatRedTheme.res  androidTheme.res  android_holo_light.res  iOS7Theme.res  iOSModernTheme.res  iPhoneTheme.res  nokia_asha_theme.res  winTheme.res
docs/: TODO.md  maps-provider-ci-setup.md
evidence/: environment.json
javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
maven/: .gitignore  README.adoc  deploy-to-sonatype.sh  deploy.sh  pom.xml  print-version.sh  release.properties  update-version.sh  update_version.sh  version.txt
maven/cli/: .bat  (+3 more)
maven/cn1-ai-whisper/android-aar/cn1-ai-whisper-android/src/main/cpp/: CMakeLists.txt  native_whisper_jni.cpp
native-themes/: COVERAGE.md  README.md
nbproject/: project.properties  project.xml
ports/: android.json  ios-gl.json  ios-metal.json  javascript.json  mac-native.json  tvos.json  watchos.json  windows-arm64.json
scripts/: README.md  _perf-bench.mjs  _perf-detail.mjs  _perf-lifecycle.mjs  _perf-trace.mjs  _synct.mjs  add-android-instrumentation-test.sh  build-android-app.sh  build-android-native-ref.sh  build-android-port.sh  build-fidelity-app.sh  build-ios-app.sh  build-ios-native-ref.sh  build-ios-port.sh  build-javascript-port-hellocodenameone.sh  build-javascript-port-initializr.sh  build-mac-native-app.sh  build-native-themes.sh  canvas-op-trace.mjs  check-boot.mjs  check-copyright-headers.sh  check-deploy.mjs  check-package-info.sh  check-since-tags.sh  ci-install-upstream-jcef-jar.sh  classify-javascript-parpar-blocker.py  cldc11_api_compat_check.py  clip-rotation-trace.mjs  cn1ss-progress-watch.mjs  copyright-header-exclusions.txt  create-ai-cn1lib.sh  deploy-diag.mjs  deploy-diag2.mjs  dialog-flicker-capture.mjs  ensure-cef-stub.sh  extract-javadoc-java-snippets.sh  fast-core-unit-smoke.sh  gen-ai-cn1libs.py  generate-android-coverage-report.sh  iframe-loader-test.mjs  (+57 more)
tests/: Keychain.ks  all.sh  core.sh  env.sh  signin-demo.sh  tests.xml
tools/: env.sh
vm/: README.md  pom.xml
(+27629 files in other folders)
