[package]
name = "cn1-ble-helper"
version = "1.0.0"
edition = "2021"
description = "Codename One JavaSE-port BLE bridge (via btleplug), built as an in-process cdylib (libcn1ble) exposing a C ABI (ParparVM ports) and a JNI ABI (JavaSE port). See PROTOCOL.md for the event JSON."
license = "GPL-2.0-only WITH Classpath-exception-2.0"

[lib]
name = "cn1ble"
# cdylib is the shipped artifact; rlib lets `cargo test` build a unit-test
# harness against the crate (it does not change the cdylib output).
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "io-util"] }
futures = "0.3"
serde_json = "1"
base64 = "0.22"
uuid = "1"
jni = "0.21"

[profile.release]
# Smaller shared library = smaller javase jar shipped to apps.
opt-level = "z"
lto = true
codegen-units = 1
strip = true
